tests/snapshots/rendering__split_view_truncating_at_80_columns.snap
---
source: tests/rendering.rs
expression: "draw(&fixture(Some(3)), View::Split, Some(80), Wrap::Truncate)"
---
a/catalog.rs → b/catalog.rs  +3 -0 ~2
───────────────────────────── ⋯ 5 unchanged lines ──────────────────────────────
            <div class="results"> │  6    6 │            <div class="results">  
                <table>           │  7    7 │                <table>            
                    <thead>       │  8    8 │                    <thead>        
                        <tr><th>"…│  9 ~  9 │                        <tr><th>"N…
                    </thead>      │ 10   10 │                    </thead>       
                    <tbody>       │ 11   11 │                    <tbody>        
                        {move || {│ 12   12 │                        {move || { 
                            let r…│ 13   13 │                            let ro…
                                  │    + 14 │                            let co…
                            rows.…│ 14 ~ 15 │                            rows.i…
                                  │    + 16 │                                .m…
                                  │    + 17 │                                .c…
                        }}        │ 15   18 │                        }}         
                    </tbody>      │ 16   19 │                    </tbody>       
                </table>          │ 17   20 │                </table>           
───────────────────────────── ⋯ 4 unchanged lines ──────────────────────────────
